# pyaput

./: .gitattributes  .gitignore  LICENSE  README.md  makefile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lockfiles.yaml  pypi.yaml  pytest.yaml
docs/dev/: README.md  cli.md  settings.md
pyaput/: cli.py
pyaput/conf/: settings.py
tests/: __init__.py  conftest.py  test_config.py  test_files.py  test_help.py  test_include.py  test_version.py
tests/fixtures/: not-changes.txt  srsran4g_23.11-1~bpo13+1.dsc  srsran4g_23.11-1~bpo13+1_amd64.changes  srsran4g_23.11-1~bpo13+1_source.changes
