[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]

[project]
authors = [{"name" = "Victor Seva"}]
description = "dput via aptly REST API"
dynamic = ["version"]
license = {"file" = "LICENSE"}
name = "pyaput"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
  "pydantic~=2.0",
  "pydantic-settings",
  "typer"
]

[project.optional-dependencies]
dev = [
  "build",
  "dapperdata",
  "glom",
  "mypy",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-pretty",
  "ruamel.yaml",
  "ruff",
  "toml-sort",
  "uv"
]

[project.scripts]
pyaput = "pyaput.cli:app"

[tool.coverage.run]
omit = [
  "./pyaput/_version.py",
  "./pyaput/__init__.py",
  "./tests/*"
]
concurrency = ["thread", "greenlet"]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
exclude = [".venv", "./pyaput/_version.py"]
line-length = 120

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.package-data]
pyaput = ["py.typed"]

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"
write_to = "pyaput/_version.py"
